syntax = "proto3";

package parksense;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "./internal/services/proto";

service ParkSenseService {
  rpc StreamIncomingParkLot (google.protobuf.Empty) returns (stream ParkSet);

  rpc GetAllParkSets (google.protobuf.Empty) returns (ParkSetListResponse);

  rpc CreateReserve (CreateReserveRequest) returns (Reserve);
  rpc GetUserActiveReserves (GetUserRequest) returns (ReserveListResponse);
  rpc GetUserReserveHistory (GetUserRequest) returns (ReserveHistoryListResponse);
  rpc CancelReserve (CancelReserveRequest) returns (google.protobuf.Empty);
}

enum LotState {
  UNKNOWN = 0;
  FREE = 1;
  OCCUPIED = 2;
  RESERVED = 3;
}

enum ParkState {
  NORMAL = 0;
  FIRE = 1;
}

message ParkLot {
  string park_lot_id = 1;
  LotState state = 2;
  uint32 row = 3;
  uint32 column = 4;
}

message ParkSet {
  string park_set_id = 1;
  repeated ParkLot lots = 2;
  ParkState state = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message Reserve {
  string reserve_id = 1;
  string slot_id = 2;
  string user_id = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message ReserveHistory {
  string reserve_history_id = 1;
  string slot_id = 2;
  string user_id = 3;
  google.protobuf.Timestamp timestamp_begin = 4;
  google.protobuf.Timestamp timestamp_end = 5;
}

message CreateReserveRequest {
  string slot_id = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message GetUserRequest {
}

message CancelReserveRequest {
  string reserve_id = 1;
}

message ParkSetListResponse {
  repeated ParkSet park_sets = 1;
}

message ReserveHistoryListResponse {
  repeated ReserveHistory history = 1;
}

message ReserveListResponse {
  repeated Reserve reserves = 1;
}